--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
       reprehenderit recusandae ipsa, laborum quidem? Sit saepe vitae doloremque?
       Fuga.
     </p>
+    <a href="contact.html">Contact me</a>
+    <a href="photo.html">Gallery</a>
   </body>
 </html>
