--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Croissant - all about baking</title>
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
     <h1>Croissant</h1>
@@ -19,7 +20,9 @@
       reprehenderit recusandae ipsa, laborum quidem? Sit saepe vitae doloremque?
       Fuga.
     </p>
+    <p>🥐🥐🥐🥐🥐🥐🥐🥐🥐</p>
     <a href="contact.html">Contact me</a>
     <a href="photo.html">Gallery</a>
+    <p>Eat as much seeeeeeeeet as you want.</p>
   </body>
 </html>
