--- a/photo.html
+++ b/photo.html
@@ -6,6 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Croissant - photos</title>
+    <link rel="stylesheet" href="styles/style.css">  </head>
+
   </head>
-  <body></body>
+  <body>
+    <img src="images/croissant.jpg" alt="yummy croissant" />
+    </body>
+    <br/><br/>
+    <a href="index.html">Home page</a>
+  </body>
 </html>
