--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
       reprehenderit recusandae ipsa, laborum quidem? Sit saepe vitae doloremque?
       Fuga.
     </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid unde,
+      facere, repellendus nulla nam accusamus tempore odit harum porro quaerat
+      reprehenderit recusandae ipsa, laborum quidem? Sit saepe vitae doloremque?
+      Fuga.
+    </p>
     <p>🥐🥐🥐🥐🥐🥐🥐🥐🥐</p>
     <a href="contact.html">Contact me</a>
     <a href="photo.html">Gallery</a>
