added git hub jpg

--- a/index.html
+++ b/index.html
@@ -30,5 +30,12 @@
     <a href="contact.html">Contact me</a>
     <a href="photo.html">Gallery</a>
     <p>Eat as much seeeeeeeeet as you want.</p>
+    <img
+      src="images/gitHub-logo.png"
+      alt="logo"
+      width="40px
+  "
+    />
+    <a href="https://github.com/AgaGali/Croissant" target="_blanc">GitHub</a>
   </body>
 </html>
