changes in links

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Croissant - all about baking</title>
     <link rel="stylesheet" href="styles/style.css" />
+    <style>
+      p {
+        color: red;
+      }
+    </style>
   </head>
   <body>
     <h1>Croissant</h1>
@@ -27,8 +32,8 @@
       Fuga.
     </p>
     <p>🥐🥐🥐🥐🥐🥐🥐🥐🥐</p>
-    <a href="contact.html">Contact me</a>
-    <a href="photo.html">Gallery</a>
+    <a href="/contact.html">Contact me</a>
+    <a href="/photo.html">Gallery</a>
     <p>Eat as much seeeeeeeeet as you want.</p>
     <img
       src="images/gitHub-logo.png"
