--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,6 @@
   </head>
   <body>
     <p>Most famous croissant baker</p>
-    <a href="index.html">Home page</a>
+    <a href="/">Home page</a>
   </body>
 </html>
