--- a/photo.html
+++ b/photo.html
@@ -13,6 +13,6 @@
     <img src="images/croissant.jpg" alt="yummy croissant" />
     </body>
     <br/><br/>
-    <a href="index.html">Home page</a>
+    <a href="/">Home page</a>
   </body>
 </html>
