--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact us - Croissant.com</title>
-    <link rel="stylesheet" href="styles/style.css">  </head>
+    <link rel="stylesheet" href="/styles/style.css">  </head>
 
   </head>
   <body>
