improved titles for better SEO

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Croissant - all about baking</title>
+    <title>Croissant - all about baking - Croissant.com</title>
     <link rel="stylesheet" href="/styles/style.css" />
     <style>
       p {
@@ -32,8 +32,8 @@
       Fuga.
     </p>
     <p>🥐🥐🥐🥐🥐🥐🥐🥐🥐</p>
-    <a href="/contact.html">Contact me</a>
-    <a href="/photo.html">Gallery</a>
+    <a href="/contact.html" title="Contact me">Contact me</a>
+    <a href="/photo.html" title="Gallery">Gallery</a>
     <p>Eat as much seeeeeeeeet as you want.</p>
     <img
       src="images/gitHub-logo.png"
@@ -41,6 +41,11 @@
       width="40px
   "
     />
-    <a href="https://github.com/AgaGali/Croissant" target="_blanc">GitHub</a>
+    <a
+      href="https://github.com/AgaGali/Croissant"
+      target="_blanc"
+      title="GitHub"
+      >GitHub</a
+    >
   </body>
 </html>
