--- a/photo.html
+++ b/photo.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Photos of home baked croissants." />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Croissant - photos</title>
+    <title>Croissant - photos - Croissant.com</title>
     <link rel="stylesheet" href="/styles/style.css">  </head>
 
   </head>
